# netforge

./: README.md  pyproject.toml
netforge/: __main__.py  config.py
netforge/modules/: __init__.py  dhcp.py  dns.py
netforge/transport/: __init__.py  winrm.py
netforge/ui/: __init__.py  app.py  dhcp_panel.py  dhcp_search_modal.py  diag_modal.py  dns_panel.py  dns_search_modal.py  login_modal.py  record_modal.py  reservation_modal.py  servers_panel.py
scripts/: generate_screenshots.py
