[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netforge"
version = "0.1.0"
description = "Windows DNS/DHCP TUI manager from Linux over WinRM"
requires-python = ">=3.9"
dependencies = [
    # TUI framework
    "textual>=0.47.0",
    # WinRM transport
    "pywinrm>=0.4.3",
    "requests-ntlm>=1.2.0",
    "requests>=2.28.0",
    # Credential storage
    "keyring>=24.0.0",
    # Config file
    "pyyaml>=6.0",
    # Rich text rendering (used by Textual internally and for Text() objects)
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Kerberos transport — install when using kinit/keytab instead of NTLM password
# Requires system packages first:
#   Debian/Ubuntu: apt install krb5-user libkrb5-dev python3-dev gcc
#   RHEL/CentOS:   yum install krb5-workstation krb5-libs python3-devel gcc
kerberos = [
    "pywinrm[kerberos]",
    "gssapi>=1.8.0",
    "requests-gssapi>=1.2.0",
]
# Headless keyring fallback — use when running without a desktop keyring daemon
# (e.g. SSH sessions, containers, servers without Gnome/KDE)
headless = [
    "keyrings.alt>=4.0.0",
]

[project.scripts]
netforge = "netforge.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netforge*"]
